--- a/src/app/components/logo-sm/logo-sm.component.html
+++ b/src/app/components/logo-sm/logo-sm.component.html
@@ -1,1 +1,1 @@
-<img src="assets/img/orgwidelogo.png" alt="Chong Hua Hospital">
+<img src="assets/img/orgwidelogo.png" alt="Chong Hua Hospital" slot="end">
