--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -3,7 +3,8 @@
     <app-logo></app-logo>
     <h2>We thank you, Doc!</h2>
     <div class="center">
-      <lottie-player
+
+      <!--lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
         background="transparent"
@@ -11,26 +12,14 @@
         style="width: 300px; height: 300px;"
         loop
         autoplay
-      ></lottie-player>
+      ></lottie-player-->
     </div>
     <h1>For your courage and service. We truly appreciate it!</h1>
     <p>Swipe left to see what we've built for you.</p>
   </ion-slide>
   <ion-slide>
     <h1>View your admitted patients.</h1>
-    <lottie-player
-      autoplay="true"
-      controls
-      loop
-      mode="normal"
-      src="assets/animations/18646-medic-clinic.json"
-      mode="bounce"
-      background="transparent"
-      speed="1"
-      style="width: 300px; height: 300px;"
-      
-      
-    ></lottie-player>
+
     <p>
       You will be notified via SMS when you have patients admitted in the
       hospital on both sites (Cebu and Mandaue).
@@ -39,15 +28,7 @@
   <ion-slide>
     <h1>View patient appointments.</h1>
     
-    <lottie-player
-      src="assets/animations/21637-calendario.json"
-      mode="bounce"
-      background="transparent"
-      speed="1"
-      style="width: 300px; height: 300px;"
-      loop
-      autoplay
-    ></lottie-player>
+
     <p>
       When your patients booked an appointment schedule online, you can now view
       a list of patients that are expected to visit your clinic.
@@ -55,15 +36,7 @@
   </ion-slide>
   <ion-slide>
     <h1>Submit professional fee online.</h1>z
-    <lottie-player
-      src="assets/animations/4774-done.json"
-      mode="normal"
-      background="transparent"
-      speed="1"
-      style="width: 300px; height: 300px;"
-      loop
-      autoplay
-    ></lottie-player>
+
     <p>
       You will be notified via SMS if your patient is about to be discharged.
       Then, you can submit your professional fee using this app.
