--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -4,7 +4,7 @@
       <ion-col size-md="4" offset-md="4">
         <!-- <div style="height: 100%; display: flex; align-items: center; justify-content: center;"> -->
           <ion-card mode="ios">
-              <ion-card-content padding="true">  
+              <ion-card-content >  
                 <div class="center">
                   <app-logo></app-logo>
                   <h1>Hello, Doc!</h1>
@@ -17,27 +17,9 @@
                       <ion-label position="floating">Password</ion-label>
                       <ion-input type="password" id="input-password" [(ngModel)]="postData.password"></ion-input>
                   </ion-item>
-                  <ion-list>
-                    <!--ion-radio-group value="vm"  [(ngModel)]='radio'>
-                      <ion-list-header>
-                        <ion-label>Login Via</ion-label>
-                      </ion-list-header>
-                  
-                      <ion-item>
-                        <ion-label>Sir Kris's VM Server</ion-label>
-                        <ion-radio slot="start" value="vm"></ion-radio>
-                      </ion-item>
-                      <ion-item>
-                        <ion-label>Appointments(desktop mode only) <br /><a href="https://chrome.google.com/webstore/detail/cors-unblock/lfhmikememgdcahcdlaciloancbhjino?hl=en" target="_BLANK">(may need CORS unblock)</a>
-                        </ion-label>
-                   
-                        <ion-radio slot="start" value="as" ></ion-radio>
-                      </ion-item>
 
-                    </ion-radio-group-->
-                  </ion-list>
                   <div class="ion-margin-vertical ion-text-right">
-                      <ion-button expand="block" id="btn-confirm" (click)="loginAction() " color="mango">
+                      <ion-button expand="block" shape="round" id="btn-confirm" (click)="loginAction() " color="mango">
                         Login
                       </ion-button>
                   </div>
