--- a/src/app/components/hospital-selector-with-all-and-filter/hospital-selector-with-all-and-filter.page.scss
+++ b/src/app/components/hospital-selector-with-all-and-filter/hospital-selector-with-all-and-filter.page.scss
@@ -8,7 +8,7 @@ ion-fab-button[data-desc] {
     z-index: 1;
     right: 55px;
     bottom: 4px;
-    background-color: var(--ion-color-dark);
+    background-color: var(--ion-color-medium);
     padding: 9px;
     border-radius: 15px;
     color: white;
