--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,35 +7,44 @@
       </ion-title>
     </ion-toolbar>
   </div>
-  <ion-grid class="ion-no-padding custom-bgwhite" >
+  <ion-grid class="ion-no-padding" >
     <ion-row >
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class="custom-border-bottom ion-no-border ">
-        <app-hospital-selector-with-all (hospital)="locationAction($event)" ></app-hospital-selector-with-all>
+        <!--app-hospital-selector-with-all (hospital)="locationAction($event)" ></app-hospital-selector-with-all-->
+        <app-hospital-selector-with-all-and-filter  (hospital)="locationAction($event)"></app-hospital-selector-with-all-and-filter>
       </ion-col>
     </ion-row>
     <ion-row >
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class=" ion-no-border ">
-
           <ion-searchbar [(ngModel)]="searchBar" (ionChange)="filterList()" mode="ios"></ion-searchbar>
-
       </ion-col>
+      <!--ion-fab horizontal="center" vertical="center" slot="fixed" *ngIf="isDesktop">
+        <ion-fab-button color="light" class="">
+          <ion-icon name="options-outline"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="bottom">
+          <ion-fab-button color="light"   data-desc="All" >
+            <ion-icon name="person-outline"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button color="light"   data-desc="Admitted">
+            <ion-icon name="person-add-outline"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button color="light"  data-desc="For Discharge">
+            <ion-icon name="person-remove-outline"></ion-icon>
+          </ion-fab-button>
+        </ion-fab-list>
+      </ion-fab-->
     </ion-row>
   </ion-grid>
-
 </ion-header>
 
 
 <ion-content >
-  
+
+
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
     <ion-refresher-content ></ion-refresher-content>
   </ion-refresher>
-
-
-
-
-
-
   <ion-grid class="ion-no-padding" >
     <ion-row>
       <ion-col
@@ -44,7 +53,7 @@
         size-lg="4"
         offset-lg="4"
         >
-
+  
         
          <div  *ngFor="let x of inPatients">
           
@@ -57,9 +66,9 @@
               <ion-avatar slot="start">
                 <text-avatar [text]="x.last_name" [color]=""></text-avatar>
               </ion-avatar>
-              <ion-label >
-                <ion-item   slot="start" lines="none"  class="ion-no-padding" >
-                  <h3 class="ion-text-wrap ">{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</h3>
+              <ion-label style="margin-top:-5px">
+                <ion-item   slot="start" lines="none"  class="ion-no-padding"  style="padding-bottom:5px">
+                  <h3 class="ion-text-wrap " style="padding-top:20px">{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</h3>
                   <ion-badge
                     color="warning"
                     slot="end"
