--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -37,7 +37,7 @@
           </ion-item>
       </ion-col>
       <ion-col size-xs="6" >
-          <ion-item lines="none">
+          <ion-item lines="none" routerLink='/menu/in-patients/DN' routerDirection="back">
             <ion-avatar slot="start">
               <text-avatar [text]='discharge' [color]=""></text-avatar>
             </ion-avatar>
