Fix center alignment of lottie player script output.

--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -1,10 +1,9 @@
 <ion-slides pager>
   <ion-slide>
     <app-logo></app-logo>
-    <h2>We thank you, Doc!</h2>
-    <div class="center">
-
-      <!--lottie-player
+    <h2>Welcome aboard, Doc!</h2>
+    <div align="center">
+      <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
         background="transparent"
@@ -12,14 +11,26 @@
         style="width: 300px; height: 300px;"
         loop
         autoplay
-      ></lottie-player-->
+      ></lottie-player>
     </div>
-    <h1>For your courage and service. We truly appreciate it!</h1>
+    <h1>
+      We <b>thank you</b> for your courage and service. We truly appreciate it!
+    </h1>
     <p>Swipe left to see what we've built for you.</p>
   </ion-slide>
   <ion-slide>
     <h1>View your admitted patients.</h1>
-
+    <div align="center">
+      <lottie-player
+        src="assets/animations/18646-medic-clinic.json"
+        mode="bounce"
+        background="transparent"
+        speed="1"
+        style="width: 300px; height: 300px;"
+        loop
+        autoplay
+      ></lottie-player>
+    </div>
     <p>
       You will be notified via SMS when you have patients admitted in the
       hospital on both sites (Cebu and Mandaue).
@@ -27,16 +38,35 @@
   </ion-slide>
   <ion-slide>
     <h1>View patient appointments.</h1>
-    
-
+    <div align="center">
+      <lottie-player
+        src="assets/animations/11013-animation-feed.json" 
+        mode="bounce"
+        background="transparent"
+        speed="1"
+        style="width: 300px; height: 300px;"
+        loop
+        autoplay
+      ></lottie-player>
+    </div>
     <p>
       When your patients booked an appointment schedule online, you can now view
       a list of patients that are expected to visit your clinic.
     </p>
   </ion-slide>
   <ion-slide>
-    <h1>Submit professional fee online.</h1>z
-
+    <h1>Submit professional fee online.</h1>
+    <div align="center">
+      <lottie-player
+        src="assets/animations/4774-done.json"
+        mode="normal"
+        background="transparent"
+        speed="1"
+        style="width: 300px; height: 300px;"
+        loop
+        autoplay
+      ></lottie-player>
+    </div>
     <p>
       You will be notified via SMS if your patient is about to be discharged.
       Then, you can submit your professional fee using this app.
