Change app-start button to round shape for consistency.

--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,1 +1,1 @@
-<ion-button expand="block" (click)="navigateToLoginPage()" color="mango">Let's Go!</ion-button>
+<ion-button shape="round" expand="block" (click)="navigateToLoginPage()" color="mango">Let's Go!</ion-button>
