Change first on-boarding slide to show hospital animation.

--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -1,9 +1,18 @@
 <ion-slides pager>
   <ion-slide>
     <app-logo></app-logo>
-    <h2>Welcome aboard, Doc!</h2>
+    <h2>Welcome aboard, Doc!</h2> 
     <div align="center">
       <lottie-player
+        src="assets/animations/5062-add-bank-chh-branding.json"
+        mode="bounce"
+        background="transparent"
+        speed="1"
+        style="width: 300px; height: 300px;"
+        loop
+        autoplay
+      ></lottie-player>
+      <!-- <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
         background="transparent"
@@ -11,7 +20,7 @@
         style="width: 300px; height: 300px;"
         loop
         autoplay
-      ></lottie-player>
+      ></lottie-player> -->
     </div>
     <h1>
       We <b>thank you</b> for your courage and service. We truly appreciate it!
